--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,7 +33,6 @@ body {
         no-repeat center / contain;
     mask: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20140%20100%22%3E%3Cpath%20d%3D%22M10%2C0H130A10%2C10%200%2C0%2C1%20140%2C10V67A8%2C8%200%2C0%2C1%20132%2C75H123A8%2C8%200%2C0%2C0%20115%2C83V92A8%2C8%200%2C0%2C1%20107%2C100H10A10%2C10%200%2C0%2C1%200%2C90V10A10%2C10%200%2C0%2C1%2010%2C0Z%22%20fill%3D%22%23fff%22%20%2F%3E%3C%2Fsvg%3E")
         no-repeat center / contain;
-    background-color: #d9fcba;
     aspect-ratio: 7 / 5;
     width: 100%;
     height: 100%;
@@ -45,7 +44,7 @@ body {
 
 #album:hover #arrow {
     transform: rotate(90deg)
-    scale(1.25);
+    scale(.6);
 }
 
 #grid-img {
@@ -77,6 +76,7 @@ body {
 .gelatine {
   animation: gelatine 0.5s infinite;
 }
+
 
 @keyframes gelatine {
     0%, 100% {
