--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -88,35 +88,55 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+#searchBarContainer {
+    transition: 1s opacity cubic-bezier(0.42, 0, 0.58, 1);
+}
+
 #searchBar {
     border-radius: 50px;
-    animation: bounceScaleIn 0.5s ease-in, hithere 1.2s ease;
 }
- 
+
+#searchForm {
+    border-radius: 30px;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
 #searchBtn {
     border-radius: 50%;
     animation: gelatine 2s infinite;
 }
 
 #searchBar input {
-    border:none;
-    outline:none;
+    border: none;
+    outline: none;
 }
 
 .bounceOut {
-    animation: bounceScaleOut 1.2s ease-in-out;
+    animation: fadeOut 1.2s ease-in-out !important;
 }
 
 @keyframes hithere {
-  30% { transform: scale(1.2); }
-  40%, 60% { transform: rotate(-2deg) scale(1.2); }
-  50% { transform: rotate(2deg) scale(1.2); }
-  70% { transform: rotate(0deg) scale(1.2); }
-  100% { transform: scale(1); }
+    30% {
+        transform: scale(1.2);
+    }
+    40%,
+    60% {
+        transform: rotate(-2deg) scale(1.2);
+    }
+    50% {
+        transform: rotate(2deg) scale(1.2);
+    }
+    70% {
+        transform: rotate(0deg) scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 @keyframes gelatine {
-    0%, 100% {
+    0%,
+    100% {
         transform: scale3d(1, 1, 1) rotate(0deg);
     }
     15% {
@@ -133,39 +153,27 @@ body {
     }
 }
 
-@keyframes bounceScaleIn {
+@keyframes fadeIn {
     0% {
         opacity: 0;
-        transform: scale(0) rotate(-8deg);
-    }
-    60% {
-        opacity: 1;
-        transform: scale(1.1) rotate(4deg);
-    }
-    80% {
-        transform: scale(0.95) rotate(-2deg);
+        transform: scale(0.98) translateY(8px);
+        filter: blur(8px);
     }
     100% {
         opacity: 1;
-        transform: scale(1) rotate(0deg);
+        transform: scale(1) translateY(0);
+        filter: blur(0px);
     }
 }
-
-@keyframes bounceScaleOut {
-    0% {
-        opacity: 1;
-        transform: scale(1) rotate(0deg);
-    }
-    20% {
-        opacity: 1;
-        transform: scale(0.95) rotate(-2deg);
-    }
-    40% {
-        opacity: 1;
-        transform: scale(1.1) rotate(4deg);
-    }
+@keyframes fadeOut {
     100% {
         opacity: 0;
-        transform: scale(0) rotate(-8deg);
+        transform: scale(0.98) translateY(8px);
+        filter: blur(8px);
+    }
+    0% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+        filter: blur(0px);
     }
 }
